--- a/bots/package.json
+++ b/bots/package.json
@@ -12,6 +12,9 @@
     "@types/react": "^15.0.29",
     "@types/react-dom": "^15.5.0",
     "@types/react-router": "^4.0.11",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.4",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
